Added config endpoint
